# xiaoai-mqtt-pc

./: .gitignore  README.md  open_notes.sh  pyproject.toml
.github/workflows/: release-build.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
docs/: agent_handover.md
packaging/: xiaoai_desktop.spec  xiaoai_desktop_macos.spec
scripts/: build_macos_app.sh  build_windows.bat  send_ctrl_r.ahk  send_ctrl_shift_q.ahk  send_ctrl_shift_w.ahk  send_hotkey.sh
src/: bootstrap_app.py
src/xiaoai_desktop/: __init__.py  action_executor.py  autostart.py  config_store.py  controller.py  log_service.py  main.py  main_window.py  models.py  mqtt_service.py
src/xiaoai_desktop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config_store.py  test_controller.py
